// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Common/<EducationItem /> should render component with all possible props 1`] = `
<div
  className="education-container row valign-wrapper"
>
  <div
    className="col s12 m3 visual"
  >
    <a
      href="schoolLink"
      rel="noopener noreferrer"
      target="_blank"
    >
      <img
        alt="icon"
        className="image"
        src="image"
      />
    </a>
  </div>
  <div
    className="col s12 m9"
  >
    <div
      className="title"
    >
      <div
        className="degree"
      >
        degree
      </div>
      <a
        className="school"
        href="schoolLink"
        rel="noopener noreferrer"
        target="_blank"
      >
        schoolName
      </a>
    </div>
    <div
      className="dates-wrapper"
    >
      <span
        className="dates"
      >
        Sep 2009
         - 
        May 2015
      </span>
      <span
        className="duration"
      >
        (
        getDuration mocked result
        )
      </span>
    </div>
    <div
      className="location"
    >
      location
    </div>
    <p
      className="description"
    >
      description
    </p>
    <div
      className="activities"
    >
      <div
        className="activities-label"
      >
        Roles and activities:
      </div>
      <ul>
        <li>
          activities1
        </li>
        <li>
          activities2
        </li>
        <li>
          activities3
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`components/Common/<EducationItem /> should render component with required props 1`] = `
<div
  className="education-container row valign-wrapper"
>
  <div
    className="col s12 m3 visual"
  >
    <a
      href="schoolLink"
      rel="noopener noreferrer"
      target="_blank"
    >
      <img
        alt="icon"
        className="image"
        src="image"
      />
    </a>
  </div>
  <div
    className="col s12 m9"
  >
    <div
      className="title"
    >
      <div
        className="degree"
      >
        degree
      </div>
      <a
        className="school"
        href="schoolLink"
        rel="noopener noreferrer"
        target="_blank"
      >
        schoolName
      </a>
    </div>
    <div
      className="dates-wrapper"
    >
      <span
        className="dates"
      >
        Sep 2009
         - 
        Now
      </span>
      <span
        className="duration"
      >
        (
        getDuration mocked result
        )
      </span>
    </div>
    <div
      className="location"
    >
      location
    </div>
    <p
      className="description"
    />
  </div>
</div>
`;
